<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="20dp">

        <ImageView
            android:id="@+id/userPictureImage"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@id/userPictureImage">

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_fullname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/fullnameText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_gender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/genderText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/emailText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_birthdate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/birthdateText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_register_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/registerDateText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/phoneText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="5dp"
                    android:text="@string/label_location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/locationText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>